--- a/frontend/villaizan2d/package.json
+++ b/frontend/villaizan2d/package.json
@@ -18,7 +18,8 @@
     "react": "^18",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
