--- a/frontend/villaizan2d/package.json
+++ b/frontend/villaizan2d/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
+    "lucide-react": "^0.451.0",
     "next": "14.2.14",
     "next-images": "^1.8.5",
     "react": "^18",
