--- a/frontend/villaizan2d/package.json
+++ b/frontend/villaizan2d/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "lucide-react": "^0.451.0",
     "next": "14.2.14",
