--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.20.0",
+    "backend": "file:",
     "crypto": "^1.0.1",
     "prisma": "^5.20.0",
     "reflect-metadata": "^0.2.0",
