--- a/frontend/villaizan2d/package.json
+++ b/frontend/villaizan2d/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "villaizan2d": "file:",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
