--- a/backend/package.json
+++ b/backend/package.json
@@ -20,10 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.1.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.20.0",
+    "axios": "^1.7.7",
     "backend": "file:",
     "crypto": "^1.0.1",
     "prisma": "^5.20.0",
