--- a/frontend/canje/package.json
+++ b/frontend/canje/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.7.7",
+    "axios": "^1.7.8",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.0.3",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18.3.1",
@@ -17,6 +18,7 @@
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
