--- a/frontend/canje/package.json
+++ b/frontend/canje/package.json
@@ -15,7 +15,8 @@
     "next-auth": "^5.0.0-beta.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.7",
